yamls/mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mosquitto
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-compose-servicenetwork: "true"
        io.kompose.service: mosquitto
    spec:
      containers:
        - image: eclipse-mosquitto
          name: mosquitto
          ports:
            - containerPort: 1883
          resources: {}
          volumeMounts:
            - mountPath: /mosquitto/db
              name: mosquitto-db
            - name: mosquitto-conf
              mountPath: /mosquitto/config
      restartPolicy: Always
      volumes:
        - name: mosquitto-db
          persistentVolumeClaim:
            claimName: mosquitto-db
        - name: mosquitto-conf
          configMap:
            name: mosquitto-conf
status: {}
