yamls/smarthomeapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: smarthomeapp
  name: smarthomeappv
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: smarthomeapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-compose-servicenetwork: "true"
        io.kompose.service: smarthomeapp
    spec:
      containers:
        - image: smarthomeapp:1.0.0
          name: smarthomeapp
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
