yamls/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
spec:
  type: NodePort
  ports:
    - name: "1883"
      port: 1883
      targetPort: 1883
      nodePort: 30010
      protocol: TCP
  selector:
    io.kompose.service: mosquitto
status:
  loadBalancer: {}
