yamls/smarthomeserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: smarthomeserver
  name: smarthomeserver
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 80
  selector:
    io.kompose.service: smarthomeserver
status:
  loadBalancer: {}
