yamls/smarthomeapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smarthomeapp-ingress
spec:
  rules:
  - host: smarthomeapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smarthomeapp
            port:
              number: 5003
